# Blatt05SysProg

./: CMakeLists.txt
src/: CMakeLists.txt  Gruppenmitglieder.txt  bakery.c  bakery.d  bakery_main  management.c  management.d  order.c  supplier.c  supplier.d  warehouse.c  worker.c  worker.d
src/bakery_main.dSYM/Contents/: Info.plist
src/bakery_main.dSYM/Contents/Resources/DWARF/: bakery_main
